new parsing of calculator help files (based on ctp_map and xml - no t2t needed)

--- a/reference/calculators/Makefile
+++ b/reference/calculators/Makefile
@@ -6,5 +6,5 @@ ref_calculators.tex: dummy
 dummy: ;
 
 clean:                                 
-	rm -f *~ all.tex *.backup
+	rm -f *~ calculators.tex *.backup
 
