--- a/fig/Makefile
+++ b/fig/Makefile
@@ -4,7 +4,7 @@ FIGPICS :=
 AGRPICS :=
 GPPICS  := 
 SVGPICS :=
-SUBDIRS := workflow reorganization_energy
+SUBDIRS := workflow reorganization_energy chemical_structure
 LOCALCLEAN :=
 
 include ../Makefile.incl
