adjusting the makefiles

--- a/reference/programs/Makefile.BINS
+++ b/reference/programs/Makefile.BINS
@@ -1,6 +1,6 @@
 SHELL=/bin/bash
 BINS1:=$(shell ls `dirname \`which ctp_run\``/ctp_* | xargs -n1 basename ) 
-BINS2:=$(shell ls `dirname \`which kmc_test\``/kmc_* | xargs -n1 basename )
+BINS2:=$(shell ls `dirname \`which kmc_run\``/kmc_* | xargs -n1 basename )
 BINS3:=$(shell ls `dirname \`which moo_overlap\``/moo_* | xargs -n1 basename )
 
 all: Makefile.incl
