CMake issues with GSL; namespace fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,11 @@ endif()
 
 
 find_package(LIBXC)
-include_directories(${LIBXC_INCLUDE_DIRS})
 if (LIBXC_FOUND)
-	set (LIBXC TRUE )
+        include_directories(${LIBXC_INCLUDE_DIRS})
+        set (LIBXC TRUE )
+else()
+        set(LIBXC_LIBRARIES)
 endif()
 
 
@@ -53,7 +55,17 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 ########################################################################
 #Find external packages
 ########################################################################
-find_package(Boost 1.39.0 REQUIRED COMPONENTS program_options serialization filesystem timer)
+
+if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.hg)
+  find_package(Mercurial)
+endif(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.hg)
+
+if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.git)
+  find_package(Git)
+endif(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.git)
+
+
+find_package(Boost 1.48.0 REQUIRED COMPONENTS program_options serialization filesystem timer)
 include_directories(${Boost_INCLUDE_DIRS})
 set (BOOST_LIBRARIES ${Boost_THREAD_LIBRARY} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_SERIALIZATION_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} ${Boost_TIMER_LIBRARY})
 set (BOOST_CFLAGS_PKG "-I${Boost_INCLUDE_DIRS}")
@@ -62,8 +74,6 @@ string(REGEX REPLACE "^(.*)/lib([^/]*)\\.[^.]*$" "-L\\1 -l\\2" BOOST_LIBS_PKG ${
 option(BUILD_MANPAGES "Build manpages (might lead to problem on system without rpath" OFF)
 #define this target here, so that individual man pages can append to it.
 add_custom_target(manpages ALL)
-
-
 
 
 #message(STATUS "BOOST_LIBRARIES='${BOOST_LIBRARIES}'")
@@ -151,7 +161,5 @@ add_subdirectory(include/votca/ctp)
 add_subdirectory(scripts)
 add_subdirectory(src/libctp)
 add_subdirectory(src/tools)
-#add_subdirectory(src/dipro)
-#add_subdirectory(share/scripts/dipro) 
 add_subdirectory(share)  
 add_subdirectory(share/man)
