--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ netbeans/ctp_map/nbproject/Package-Release.bash
 netbeans/ctp_run/nbproject/Package-Debug.bash
 netbeans/ctp_run/nbproject/Package-Release.bash
 
+netbeans/libctp/nbproject/private/
+
 CMakeFiles
 cmake_install.cmake
 CMakeCache.txt
