.travis.yml: disable -Werror build for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
     - GMX_MAX_THREADS=8
     - CCACHE_CPP2=yes
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
-    - CTP=yes WERROR=yes J=4
+#    - CTP=yes WERROR=yes J=4
     - CTP=yes WALL=yes J=4
 
 before_script:
