--- a/include/votca/kmc/CMakeLists.txt
+++ b/include/votca/kmc/CMakeLists.txt
@@ -1,2 +1,3 @@
+cmake_minimum_required(VERSION 3.3)
 file(GLOB_RECURSE VOTCA_HEADERS *.h)
 install(FILES ${VOTCA_HEADERS} DESTINATION include/votca/kmc)
