--- a/.travis.yml
+++ b/.travis.yml
@@ -16,19 +16,21 @@ addons:
       - ccache
       - gcc-4.8
       - g++-4.8
+      - libfftw3-dev
       - cmake
       - cmake-data
-      - libfftw3-dev
       - libgsl0-dev
       - txt2tags
       - libboost1.55-all-dev
       - libexpat1-dev
       - libsqlite3-dev
+      - libhdf5-serial-dev
       - pkg-config
       - pgf
       - texlive-fonts-recommended
       - texlive-latex-extra
       - texlive-latex-recommended
+      - cm-super
       - doxygen
       - graphviz
       - python-numpy
@@ -37,9 +39,10 @@ addons:
 
 env:
   global:
-    - CMAKE_VERSION=3.1.3-Linux-x86_64
+    - HDF5_VERSION=1.8.14
     - GMX_MAX_THREADS=8
-    - CCACHE_CPP2=yes
+    - CCACHE_CPP2=yes #for clang
+    - GVER=4.8
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
     - CTP=yes WERROR=yes J=4
     - CTP=yes WALL=yes J=4
@@ -47,27 +50,33 @@ env:
 before_script:
   - rm -vrf * .git
   - wget https://raw.githubusercontent.com/votca/buildutil/master/build.sh && chmod 755 build.sh
-  - mkdir -p "$HOME/votca/src" "$HOME/votca/share/votca/scripts/inverse" "$HOME/bin"
-  - wget -O "$HOME/votca/share/votca/scripts/inverse/cma.py" http://www.lri.fr/~hansen/cma.py
-  - ln -s /usr/bin/ccache "$HOME/bin/clang++"
-  - ln -s /usr/bin/ccache "$HOME/bin/clang"
-# download newer cmake for gmx
-  - wget --no-check-certificate -qO- http://www.cmake.org/files/v${CMAKE_VERSION:0:3}/cmake-${CMAKE_VERSION}.tar.gz | tar -xz
-  - ln -vs $PWD/cmake-${CMAKE_VERSION}/bin/cmake "$HOME/bin/cmake"
-  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+  - mkdir -p "$HOME/votca/src"
+  - if [[ ${MINIMAL} != yes ]]; then 
+      wget -qO- https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-${HDF5_VERSION}/src/hdf5-${HDF5_VERSION}.tar.gz | tar -xz &&
+      cd hdf5-${HDF5_VERSION} && ./configure --prefix=$HOME/hdf5 && make -j4 &> /dev/null && make install && cd ..;
+    fi
+  - if [[ ${GMX_VERSION} = 9999 ]]; then
+      CMAKE_VERSION=3.4.3-Linux-x86_64 &&
+      wget --no-check-certificate -qO- http://www.cmake.org/files/v${CMAKE_VERSION:0:3}/cmake-${CMAKE_VERSION}.tar.gz | tar -xz &&
+      export CMAKE="$PWD/cmake-${CMAKE_VERSION}/bin/cmake" ;
+    fi
+  - if [[ ${GVER} ]]; then export CC=gcc-${GVER}; export CXX=g++-${GVER}; fi
 
 script:
-  - PATH="$HOME/bin:/usr/lib/ccache:$PATH" ./build.sh -Wu --dev --prefix "$HOME/votca" ${MAN:+--devdoc}
-    ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} ${MINIMAL:+--minimal}
-    ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall}
-    --directory "$HOME/votca/src" --no-clean --depth 1
-    tools gromacs csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
-    ${CTP:+kmc moo ctp}
+  - PATH="$HOME/hdf5:$PATH" ./build.sh -Wu $([[ ${TRAVIS_BRANCH} = stable ]] || echo "--dev") --prefix "$HOME/votca"
+    ${TYPE:+-DCMAKE_BUILD_TYPE=${TYPE}}
+    ${TEST:+--runtest=$TEST} ${WERROR:+--warn-to-errors} -DWITH_H5MD=ON ${MINIMAL:+--minimal} ${MAN:+--devdoc}
+    ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
+    --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:+-DGMX_DOUBLE=yes}
+    tools $([[ ${MINIMAL} ]] || echo gromacs) csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
+    ${CTP:+kmc moo ctp} ${XTP:+xtp}
 
 cache:
-  directories:
-    - $HOME/.ccache
+  - ccache
 
 compiler:
-  - clang
   - gcc
+
+notifications:
+  email:
+    - votca-commits@googlegroups.com 
