--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,10 @@ env:
     - CCACHE_CPP2=yes #for clang
     - GVER=4.8
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
-    - CTP=yes WERROR=yes J=4
-    - CTP=yes WALL=yes J=4
+    - CTP=yes WERROR=yes J=4 TYPE=Debug
+    - CTP=yes WALL=yes J=4 TYPE=Debug
+    - CTP=yes BDIR=build WERROR=yes J=4 TYPE=Release
+    - CTP=yes BDIR=build WALL=yes J=4 TYPE=Release
 
 before_script:
   - rm -vrf * .git
@@ -54,11 +56,6 @@ before_script:
   - if [[ ${MINIMAL} != yes ]]; then 
       wget -qO- https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-${HDF5_VERSION}/src/hdf5-${HDF5_VERSION}.tar.gz | tar -xz &&
       cd hdf5-${HDF5_VERSION} && ./configure --prefix=$HOME/hdf5 && make -j4 &> /dev/null && make install && cd ..;
-    fi
-  - if [[ ${GMX_VERSION} = 9999 ]]; then
-      CMAKE_VERSION=3.4.3-Linux-x86_64 &&
-      wget --no-check-certificate -qO- http://www.cmake.org/files/v${CMAKE_VERSION:0:3}/cmake-${CMAKE_VERSION}.tar.gz | tar -xz &&
-      export CMAKE="$PWD/cmake-${CMAKE_VERSION}/bin/cmake" ;
     fi
   - if [[ ${GVER} ]]; then export CC=gcc-${GVER}; export CXX=g++-${GVER}; fi
 
@@ -69,7 +66,7 @@ script:
     ${J:+-j$J} ${BDIR:+--builddir=$BDIR} ${NINJA:+--ninja} ${WALL:+--Wall} ${GMX_VERSION:+--gmx-release ${GMX_VERSION}}
     --directory "$HOME/votca/src" --no-clean --depth 1 -DGMX_USE_RDTSCP=OFF ${GMX_DOUBLE:+-DGMX_DOUBLE=yes}
     tools $([[ ${MINIMAL} ]] || echo gromacs) csg csgapps ${MAN:+csg-manual} ${TEST:+csg-tutorials}
-    ${CTP:+kmc moo ctp} ${XTP:+xtp}
+    ${CTP:+kmc moo ctp} ${XTP:+moo ctp xtp}
 
 cache:
   - ccache
