enabled debug builds in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,8 @@ env:
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
     - XTP=yes WERROR=yes J=4
     - XTP=yes WALL=yes J=4
+    - XTP=yes WERROR=yes J=4 BDIR=build TYPE=Debug
+    - XTP=yes WALL=yes J=4 BDIR=build TYPE=Debug
 
 before_script:
   - rm -vrf * .git
