--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,8 @@ env:
     - CCACHE_CPP2=yes #for clang
     - GVER=4.8
   matrix: #NINJA=1 is currently not support by Travis' cmake, enable when >=2.8.9
-    - XTP=yes WERROR=yes J=4
-    - XTP=yes WALL=yes J=4
+    - XTP=yes WERROR=yes J=4 Type=Release
+    - XTP=yes WALL=yes J=4 Type=Release
     - XTP=yes WERROR=yes J=4 BDIR=build TYPE=Debug
     - XTP=yes WALL=yes J=4 BDIR=build TYPE=Debug
 
