--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ share/doc/html
 share/doc/Doxyfile
 
 src/libctp/votca_config.h
-src/libctp/hgversion.h
+src/libctp/gitversion.h
 include/votca/ctp/votca_ctp_config.h
 
 src/tools/ctp_dump
