--- a/scripts/ctp_dipro.in
+++ b/scripts/ctp_dipro.in
@@ -15,7 +15,7 @@
 # limitations under the License.
 #
 
-version='@PROJECT_VERSION@ #CSG_HG_ID#'
+version='@PROJECT_VERSION@ #CTP_GIT_ID#'
 cmd=""
 args=2
 debug=""
