--- a/src/libctp/libvotca_ctp.pc.in
+++ b/src/libctp/libvotca_ctp.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include
 Name: libvotca_ctp
 Description: charge transport functions of the votca package
 URL: http://www.votca.org
-Version: @VERSION@
+Version: @PROJECT_VERSION@
 Requires: libvotca_tools libvotca_csg @VOTCA_KMCOLD_PKG@ libvotca_moo
 Libs: -L${libdir} -lvotca_ctp
 Libs.private: -lm
