--- a/src/libmoo/libvotca_moo.pc.in
+++ b/src/libmoo/libvotca_moo.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include
 Name: libvotca_moo
 Description: moo functions of the votca package
 URL: http://www.votca.org
-Version: @VERSION@
+Version: @PROJECT_VERSION@
 Requires: libvotca_tools
 Libs: -L${libdir} -lvotca_moo
 Libs.private: -lm
