--- a/src/libkmc/libvotca_kmc.pc.in
+++ b/src/libkmc/libvotca_kmc.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include
 Name: libvotca_kmc
 Description: kinetic monte carlo of the votca package
 URL: http://www.votca.org
-Version: @VERSION@
+Version: @PROJECT_VERSION@
 Requires: libvotca_tools 
 Libs: -L${libdir} -lvotca_kmc
 Libs.private: -lm
