cmake: switch to GNUInstallDirs

--- a/share/xml/CMakeLists.txt
+++ b/share/xml/CMakeLists.txt
@@ -1,2 +1,2 @@
 file(GLOB_RECURSE VOTCA_KMC_XML *.xml)
-install(FILES ${VOTCA_KMC_XML} DESTINATION ${DATA}/kmc/xml)
+install(FILES ${VOTCA_KMC_XML} DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/kmc/xml)
