--- a/src/libkmc/CMakeLists.txt
+++ b/src/libkmc/CMakeLists.txt
@@ -15,7 +15,7 @@ list(REMOVE_ITEM VOTCA_SOURCES ${NOT_VOTCA_SOURCES})
 add_library(votca_kmc  ${VOTCA_SOURCES})
 add_dependencies(votca_kmc gitversion-kmc)
 target_link_libraries(votca_kmc ${VOTCA_TOOLS_LIBRARIES})
-install(TARGETS votca_kmc LIBRARY DESTINATION ${LIB} ARCHIVE DESTINATION ${LIB})
+install(TARGETS votca_kmc LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 configure_file(libvotca_kmc.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libvotca_kmc.pc @ONLY)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libvotca_kmc.pc DESTINATION ${LIB}/pkgconfig)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libvotca_kmc.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
