cmake: switch to GNUInstallDirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,19 +22,7 @@ include(CheckCXXCompilerFlag)
 # User input options                                                   #
 ########################################################################
 option(BUILD_SHARED_LIBS "Build shared libs" ON)
-if (NOT DEFINED LIB)
-#  if (CMAKE_SIZEOF_VOID_P MATCHES "8")
-#    set( LIB_SUFFIX "64" )
-#  endif(CMAKE_SIZEOF_VOID_P MATCHES "8")
-#  set(LIB "lib${LIB_SUFFIX}")
-  set(LIB "lib")
-endif(NOT DEFINED LIB)
-if (NOT DEFINED MAN)
-  set(MAN "share/man")
-endif(NOT DEFINED MAN)
-if (NOT DEFINED DATA)
-  set(DATA "share/votca")
-endif(NOT DEFINED DATA)
+include(GNUInstallDirs)
 
 option(ENABLE_TESTING "Build and enable testing stuff" OFF)
 if(ENABLE_TESTING)
