--- a/src/libmoo/CMakeLists.txt
+++ b/src/libmoo/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB VOTCA_SOURCES *.cc *.cpp)
 #list(REMOVE_ITEM VOTCA_SOURCES ${NOT_VOTCA_SOURCES})
 add_library(votca_moo  ${VOTCA_SOURCES})
 target_link_libraries(votca_moo ${VOTCA_TOOLS_LIBRARIES})
-install(TARGETS votca_moo LIBRARY DESTINATION ${LIB} ARCHIVE DESTINATION ${LIB})
+install(TARGETS votca_moo LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 configure_file(libvotca_moo.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libvotca_moo.pc @ONLY)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libvotca_moo.pc DESTINATION ${LIB}/pkgconfig)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libvotca_moo.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
