cmake: switch to GNUInstallDirs

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -8,7 +8,7 @@ if(WITH_DIPRO)
       -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/gitscript.cmake
       DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out)
     set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
-    install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
+    install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION ${CMAKE_INSTALL_BINDIR})
   endforeach(SCRIPT)
 endif(WITH_DIPRO)
 
@@ -21,6 +21,6 @@ foreach(SCRIPT ctp_testsuite ctp_update)
     -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}" -P ${CMAKE_MODULE_PATH}/gitscript.cmake
     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}.out)
   set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES ${SCRIPT})
-  install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION bin)
+  install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT} DESTINATION ${CMAKE_INSTALL_BINDIR})
 endforeach(SCRIPT)
 
