--- a/share/qmpackages/CMakeLists.txt
+++ b/share/qmpackages/CMakeLists.txt
@@ -1,2 +1,2 @@
 file(GLOB_RECURSE VOTCA_CTP_XML *.xml)
-install(FILES ${VOTCA_CTP_XML} DESTINATION ${DATA}/ctp/qmpackages/)
+install(FILES ${VOTCA_CTP_XML} DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/ctp/qmpackages/)
