--- a/src/dipro/CMakeLists.txt
+++ b/src/dipro/CMakeLists.txt
@@ -6,5 +6,5 @@ if(WITH_DIPRO)
   add_executable(DIPRO.x DIPRO-TI.f90 stringmod.f90 output.f90 ranking.f90 precmod.f90 parsetools.f90 parsetools_noSCF.f90)
   target_link_libraries(DIPRO.x ${LAPACK_LIBRARIES})
   
-  install(TARGETS mergeorbitals.x DIPRO.x RUNTIME DESTINATION bin)
+  install(TARGETS mergeorbitals.x DIPRO.x RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif(WITH_DIPRO)
