--- a/src/libctp/CMakeLists.txt
+++ b/src/libctp/CMakeLists.txt
@@ -35,7 +35,7 @@ list(REMOVE_ITEM VOTCA_SOURCES ${NOT_VOTCA_SOURCES})
 add_library(votca_ctp  ${VOTCA_SOURCES})
 add_dependencies(votca_ctp gitversion-ctp)
 target_link_libraries(votca_ctp ${VOTCA_CSG_LIBRARIES} ${MKL_LIBRARIES} ${GSL_LIBRARIES} ${VOTCA_MOO_LIBRARIES} ${VOTCA_TOOLS_LIBRARIES} ${BOOST_LIBRARIES} )
-install(TARGETS votca_ctp LIBRARY DESTINATION ${LIB} ARCHIVE DESTINATION ${LIB})
+install(TARGETS votca_ctp LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 configure_file(libvotca_ctp.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libvotca_ctp.pc @ONLY)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libvotca_ctp.pc DESTINATION ${LIB}/pkgconfig)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libvotca_ctp.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
