--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,15 +36,7 @@ endif()
 ########################################################################
 
 option(BUILD_SHARED_LIBS "Build shared libs" ON)
-if (NOT DEFINED LIB)
-  set(LIB "lib")
-endif(NOT DEFINED LIB)
-if (NOT DEFINED MAN)
-  set(MAN "share/man")
-endif(NOT DEFINED MAN)
-if (NOT DEFINED DATA)
-  set(DATA "share/votca")
-endif(NOT DEFINED DATA)
+include(GNUInstallDirs)
 #option(WITH_DIPRO "Build mergeorbitals and DIPRO, which use fortran" ON)
 
 option(ENABLE_TESTING "Build and enable testing stuff" OFF)
@@ -58,10 +50,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 ########################################################################
 #Find external packages
 ########################################################################
-if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.hg)
-  find_package(Mercurial)
-endif(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.hg)
-
 if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.git)
   find_package(Git)
 endif(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.git)
