--- a/share/scripts/dipro/CMakeLists.txt
+++ b/share/scripts/dipro/CMakeLists.txt
@@ -1,4 +1,4 @@
 file(GLOB VOTCA_SCRIPTS *.sh *.pl *.py)
 
-install(FILES ${VOTCA_FILES} DESTINATION ${DATA}/scripts/dipro)
-install(PROGRAMS ${VOTCA_SCRIPTS} DESTINATION ${DATA}/scripts/dipro)
+install(FILES ${VOTCA_FILES} DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/scripts/dipro)
+install(PROGRAMS ${VOTCA_SCRIPTS} DESTINATION ${CMAKE_INSTALL_DATADIR}/votca/scripts/dipro)
