cmake: fix underlinking error
Ref: https://groups.google.com/d/topic/votca/JRbxGWiOKeg/discussion
Ref: https://groups.google.com/d/topic/votca-ctp/0yK0qejj9cE/discussion

--- a/src/libctp/CMakeLists.txt
+++ b/src/libctp/CMakeLists.txt
@@ -1,6 +1,6 @@
-option(WITH_GSL "Use GSL, disabling leads to reduced functionality!" OFF)
+option(WITH_GSL "Use GSL, disabling leads to reduced functionality!" ${VOTCA_TOOLS_HAS_GSL})
 if (WITH_GSL)
-  find_package(GSL)
+  find_package(GSL REQUIRED)
   if(NOT GSL_FOUND)
     message(FATAL_ERROR "GSL not found,  make sure you have also installed the gsl and it's dev package")
   endif(NOT GSL_FOUND)
@@ -11,7 +11,7 @@ else(WITH_GSL)
   set(GSL_PKG)
 endif(WITH_GSL)
 
-option(WITH_MKL "Checking if MKL is installed in order to improve UBLAS performance" ON)
+option(WITH_MKL "Checking if MKL is installed in order to improve UBLAS performance" OFF)
 if (WITH_MKL)
   find_package(MKL)
   if(NOT MKL_FOUND AND CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
