--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ share/doc/Doxyfile
 
 src/libctp/votca_config.h
 src/libctp/gitversion.h
-include/votca/ctp/votca_ctp_config.h
+src/libmoo/votca_config.h
+src/libmoo/gitversion.h
 
 src/tools/ctp_dump
 src/tools/ctp_parallel
