--- a/include/votca/ctp/CMakeLists.txt
+++ b/include/votca/ctp/CMakeLists.txt
@@ -1,5 +1,3 @@
-configure_file(votca_ctp_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/votca_ctp_config.h)
-
-file(GLOB_RECURSE VOTCA_HEADERS *.h ${CMAKE_CURRENT_BINARY_DIR}/votca_ctp_config.h)
+file(GLOB_RECURSE VOTCA_HEADERS *.h)
 install(FILES ${VOTCA_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/votca/ctp)
 
