--- a/manual/reference/programs/Makefile
+++ b/manual/reference/programs/Makefile
@@ -1,7 +1,7 @@
 SHELL=/bin/bash
 DIR:=$(shell pwd | sed 's@^.*/\([^/]*/[^/]*\)$$@\1@' )
 TRUNC=$(shell git rev-parse --show-toplevel)
-TXT2TAGS=$(TRUNC)/scripts/txt2tags
+TXT2TAGS=$(TRUNC)/manual/scripts/txt2tags
 
 .PHONY: clean bootstrap
 .SECONDARY:
