--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,3 +125,4 @@ add_subdirectory(src/libmoo)
 add_subdirectory(src/tools)
 add_subdirectory(share)  
 add_subdirectory(share/man)
+add_subdirectory(manual)
