--- a/manual/fig/CMakeLists.txt
+++ b/manual/fig/CMakeLists.txt
@@ -2,4 +2,12 @@ list(APPEND manual_FIGURES
     "fig/logo.eps"
     "fig/chemical_structure/dcv2t.eps"
     "fig/conjugated_segment/fragment_segment.eps"
+    "fig/idft_flow/schemes_all.eps"
+    "fig/conjugated_segment/fragment_segment.eps"
+    "fig/reorganization_energy/monomer_parabolas.eps"
+    "fig/workflow/workflow.eps"
 )
+
+#appendix/derivation_jortner.tex:%    \includegraphics[width=1.0\textwidth]{fig/jortner_rate/marcus_parabolas_new}
+#appendix/derivation_jortner.tex:%   \includegraphics[width=\linewidth]{fig/jortner_rate/compare_rates}
+
