--- a/manual/theory/CMakeLists.txt
+++ b/manual/theory/CMakeLists.txt
@@ -3,13 +3,18 @@ list(APPEND manual_SOURCES
     "theory/correlations.tex"
     "theory/dft.tex"
     "theory/dipro.tex"
+    "theory/dft.tex"
     "theory/introduction.tex"
     "theory/electronic_couplings.tex"
+    "theory/energetic_disorder.tex"
     "theory/fragments.tex"
     "theory/gdma.tex"
     "theory/kmc.tex"
     "theory/lowdin.tex"
+    "theory/neighborlist.tex"
     "theory/moo.tex"
+    "theory/morphology.tex"
+    "theory/nondispersive.tex"
     "theory/rate.tex"
     "theory/reorganization_energy.tex"
     "theory/thole.tex"
