--- a/manual/fig/CMakeLists.txt
+++ b/manual/fig/CMakeLists.txt
@@ -1,11 +1,10 @@
 list(APPEND manual_FIGURES
-    "fig/logo.eps"
-    "fig/chemical_structure/dcv2t.eps"
-    "fig/conjugated_segment/fragment_segment.eps"
-    "fig/idft_flow/schemes_all.eps"
-    "fig/conjugated_segment/fragment_segment.eps"
-    "fig/reorganization_energy/monomer_parabolas.eps"
-    "fig/workflow/workflow.eps"
+    "fig/logo.svg"
+    "fig/dcv2t.svg"
+    "fig/coupling.svg"
+    "fig/fragment_segment.svg"
+    "fig/monomer_parabolas.svg"
+    "fig/workflow.svg"
 )
 
 #appendix/derivation_jortner.tex:%    \includegraphics[width=1.0\textwidth]{fig/jortner_rate/marcus_parabolas_new}
