--- a/manual/CMakeLists.txt
+++ b/manual/CMakeLists.txt
@@ -1,6 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
 
-INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules/UseLATEX.cmake)
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
+INCLUDE(${CMAKE_MODULE_PATH}/UseLATEX.cmake)
 latex_get_output_path(output_dir)
 
 MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} ) 
@@ -8,11 +9,22 @@ MESSAGE( STATUS "CMAKE_MODULE_PATH: " ${CMAKE_MODULE_PATH} )
 MESSAGE( STATUS "MANUAL_SOURCES: " ${manual_SOURCES} ) 
 MESSAGE( STATUS "OUTPUT_PATH: " ${output_dir} ) 
 
-include(theory/CMakeLists.txt) # description files
-#include(reference/programs/CMakeLists.txt) # 
-include(reference/xml/CMakeLists.txt)
-include(fig/CMakeLists.txt)
-include(input/CMakeLists.txt)
+if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.git)
+  find_package(Git)
+endif(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/.git)
+
+add_custom_target(ctp-gitid COMMAND ${CMAKE_COMMAND}
+  -DTOP_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
+  -DPROJECT_VERSION="${PROJECT_VERSION}"
+  -DGIT_EXECUTABLE="${GIT_EXECUTABLE}"
+  -P ${CMAKE_MODULE_PATH}/gitid.cmake)
+set_property(DIRECTORY APPEND PROPERTY ADDITIONAL_MAKE_CLEAN_FILES gitid.tex)
+add_custom_command(OUTPUT gitid_tex DEPENDS ctp-gitid)
+
+include(theory/CMakeLists.txt)        # manual_SOURCES
+include(reference/xml/CMakeLists.txt) # manual_PROGRAMS
+include(fig/CMakeLists.txt)           # manual_FIGURES
+include(input/CMakeLists.txt)         # manual_XML
 
 
 # generates tex refernce for all calculators 
@@ -43,7 +55,7 @@ ADD_LATEX_DOCUMENT( manual.tex
             ${manual_PROGRAMS}
             ${manual_XML}
             ${manual_FIGURES}
-    DEPENDS calculator_refs program_refs xml_refs
+    DEPENDS calculator_refs program_refs xml_refs gitid_tex
     IMAGE_DIRS fig
     BIBFILES manual.bib
     USE_INDEX
