in-source build check

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
 *~
 
-CMakeCache.txt
-CMakeFiles
-Makefile
-cmake_install.cmake
+build/*
 
-include/votca/kmc/Makefile
-include/votca/kmc/cmake_install.cmake
 
-src/tools/kmc_run 
-src/tools/*.man
-
-install_manifest.txt
-
-src/libkmc/libvotca_kmc.so
-src/libkmc/gitversion.h
-src/libkmc/votca_config.h
-src/libkmc/*.pc
 
