--- a/src/libkmc/CMakeLists.txt
+++ b/src/libkmc/CMakeLists.txt
@@ -14,6 +14,7 @@ list(REMOVE_ITEM VOTCA_SOURCES ${NOT_VOTCA_SOURCES})
 
 add_library(votca_kmc  ${VOTCA_SOURCES})
 add_dependencies(votca_kmc gitversion-kmc)
+set_target_properties(votca_kmc PROPERTIES SOVERSION ${SOVERSION})
 target_link_libraries(votca_kmc ${VOTCA_TOOLS_LIBRARIES})
 install(TARGETS votca_kmc LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
