--- a/src/libmoo/libvotca_moo.pc.in
+++ b/src/libmoo/libvotca_moo.pc.in
@@ -1,11 +1,10 @@
-prefix=@CMAKE_INSTALL_PREFIX@
-libdir=${prefix}/@LIB@
-includedir=${prefix}/include
+libdir=@CMAKE_INSTALL_FULL_LIBDIR@
+includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 
 Name: libvotca_moo
 Description: moo functions of the votca package
 URL: http://www.votca.org
-Version: @VERSION@
+Version: @PROJECT_VERSION@
 Requires: libvotca_tools
 Libs: -L${libdir} -lvotca_moo
 Libs.private: -lm
