--- a/src/libctp/CMakeLists.txt
+++ b/src/libctp/CMakeLists.txt
@@ -1,23 +1,3 @@
-option(WITH_GSL "Use GSL, disabling leads to reduced functionality!" ${VOTCA_TOOLS_HAS_GSL})
-if (WITH_GSL)
-  find_package(GSL REQUIRED)
-  if(NOT GSL_FOUND)
-    message(FATAL_ERROR "GSL not found,  make sure you have also installed the gsl and it's dev package")
-  endif(NOT GSL_FOUND)
-  include_directories(${GSL_INCLUDE_DIRS})
-  set(GSL_PKG "gsl")
-else(WITH_GSL)
-  set(NOGSL TRUE)
-  set(GSL_PKG)
-endif(WITH_GSL)
-
-option(WITH_MKL "Checking if MKL is installed in order to improve UBLAS performance" OFF)
-if (WITH_MKL)
-  find_package(MKL)
-  if(NOT MKL_FOUND AND CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
-    #TODO: try to append -mkl to cflags
-  endif(NOT MKL_FOUND AND CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
-endif(WITH_MKL)
 
 configure_file(votca_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/votca_config.h)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
@@ -35,7 +15,7 @@ list(REMOVE_ITEM VOTCA_SOURCES ${NOT_VOTCA_SOURCES})
 add_library(votca_ctp  ${VOTCA_SOURCES})
 add_dependencies(votca_ctp gitversion-ctp)
 set_target_properties(votca_ctp PROPERTIES SOVERSION ${SOVERSION})
-target_link_libraries(votca_ctp ${VOTCA_CSG_LIBRARIES} ${MKL_LIBRARIES} ${GSL_LIBRARIES} votca_moo ${VOTCA_TOOLS_LIBRARIES} ${Boost_LIBRARIES} )
+target_link_libraries(votca_ctp ${VOTCA_CSG_LIBRARIES} ${GSL_LIBRARIES} votca_moo ${VOTCA_TOOLS_LIBRARIES} ${Boost_LIBRARIES} )
 install(TARGETS votca_ctp LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 configure_file(libvotca_ctp.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libvotca_ctp.pc @ONLY)
