--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_subdirectory(xml)
+add_subdirectory(ctp/xml)
 add_subdirectory(doc)
 add_subdirectory(moo)
-add_subdirectory(kmc)
+add_subdirectory(kmc/xml)
 add_subdirectory(qmpackages)
