--- a/scripts/ctp_update.in
+++ b/scripts/ctp_update.in
@@ -1,10 +1,10 @@
-#! /usr/bin/env python2
+#! /usr/bin/env python3
 VERSION='@PROJECT_VERSION@ #CTP_GIT_ID#'
 import sys
 import os
 import getpass
 import socket
-import commands as cmds
+import subprocess as cmds
 import numpy as np
 import xml.dom.minidom as xmld
 import time
@@ -28,14 +28,14 @@ ctp_update, version {version}
 '''.format(version=VERSION, progtitle=PROGTITLE)
 
 def okquit(what=''):
-	if what != '': print what
+	if what != '': print ( what )
 	sys.exit(0)
 def xxquit(what=''):
 	if what != '':
 		cprint.Error("ERROR: {what}".format(what=what))
 	sys.exit(1)
 def sysexe(cmd, silent=False, devfile='/dev/null'):
-	if VERBOSE: print "{0}@{1}$ {2}".format(USER, HOST, cmd)
+	if VERBOSE: print ( "{0}@{1}$ {2}".format(USER, HOST, cmd) )
 	if silent: cmd += ' >> {0} 2>> {0}'.format(devfile)
 	cdx = os.system(cmd)
 	#SYSCMDS.write('{cmd} = {cdx}\n'.format(cmd=cmd, cdx=cdx))
@@ -76,7 +76,7 @@ port = conn.cursor()
 try:
 	port.execute('ALTER TABLE pairs ADD COLUMN type INT;')
 except:
-	print "'pair' table already up-to-date"
+	print ( "'pair' table already up-to-date" )
 	
 try:
 	port.execute('''CREATE TABLE superExchange 
@@ -85,7 +85,7 @@ try:
             top        INT NOT NULL,
             type      TEXT NOT NULL)''')
 except:
-	print "'superExchange' table already up-to-date"
+	print ( "'superExchange' table already up-to-date" )
 
 conn.commit()
 conn.close()
