cmake: use VOTCA:: imported targets

--- a/src/libctp/CMakeLists.txt
+++ b/src/libctp/CMakeLists.txt
@@ -15,7 +15,7 @@ list(REMOVE_ITEM VOTCA_SOURCES ${NOT_VOTCA_SOURCES})
 add_library(votca_ctp  ${VOTCA_SOURCES})
 add_dependencies(votca_ctp gitversion-ctp)
 set_target_properties(votca_ctp PROPERTIES SOVERSION ${SOVERSION})
-target_link_libraries(votca_ctp ${VOTCA_CSG_LIBRARIES} ${GSL_LIBRARIES} votca_moo ${VOTCA_TOOLS_LIBRARIES} ${Boost_LIBRARIES} )
+target_link_libraries(votca_ctp VOTCA::votca_csg ${GSL_LIBRARIES} votca_moo VOTCA::votca_tools ${Boost_LIBRARIES} )
 install(TARGETS votca_ctp LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 configure_file(libvotca_ctp.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libvotca_ctp.pc @ONLY)
